# desi-clustering

./: .gitignore  README.md  pyproject.toml
clustering_statistics/: __init__.py  compute_stats.py  correlation2_tools.py  density_tools.py  plotting_tools.py  recon_tools.py  spectrum2_tools.py  spectrum3_tools.py  tools.py  tools_abacushf_cubic.py
clustering_statistics/job_scripts/: blinded_data_pip.py  check_boxsize.sh  des_footprint.npy  desipipe_abacus_mocks.py  desipipe_glam-uchuu_mocks.py  desipipe_holi_mocks.py  desipipe_merged_catalogs.py  job_data.sh  job_holi_mocks.sh  region_splits.sh  run_abacushf_cubic.py  validation_glam-uchuu_mocks.py  validation_holi_lightcone.py  validation_holi_mocks.py
clustering_statistics/nb/: check_preliminary_run.ipynb  checking_boxsize.ipynb  checking_code.ipynb  checking_randoms.ipynb  example_read_stats.ipynb  pkrun_checks.ipynb  read_abacushf.ipynb  validation_glam-uchuu_mocks.ipynb  validation_holi_lightcone.ipynb  validation_holi_mocks.ipynb  validation_integral_constraints.ipynb
clustering_statistics/tests/: check_fiducial_setup.py  test.py
dr2_2pt/: jax-pkcov.py  jax-pkrun.py  jax-xirun.py  pkrun_checks.ipynb  run_test_boxsize.sh  tools.py
dr2_2pt/.ipynb_checkpoints/: pkrun_checks-checkpoint.ipynb  run_test-checkpoint.sh
full_shape/: check_fiducial_setup.py  compute_fiducial_stats.py  correlation2_tools.py  fit_blinded_data.py  fitting_tools.py  helper.py  plotting_tools.py  recon_tools.py  spectrum2_tools.py  spectrum3_tools.py  splits_fit.sh  submit_splits_fit.sh  tools.py
nb/: read_clustering.ipynb
(+10 files in other folders)
