[project]
name = "cai-dr2-clustering-products"
authors = [{name = "cosmodesi"}]
description = "DR2 Full-Shape analysis"
version = "0.2.0"
dependencies = []
readme = "README.md"
requires-python = ">=3.10"
urls = {Repository = "https://github.com/cosmodesi/cai-dr2-clustering-products"}
classifiers = ["Programming Language :: Python :: 3"]

[project.scripts]
clustering-stats = "clustering_statistics.compute_stats:main"

[tool.setuptools]
packages = ["clustering_statistics"]